# assert-algebraic

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  assert_algebraic.h
docs/: assert__algebraic_8h.html  assert__algebraic_8h__incl.md5  assert__algebraic_8h_source.html  files.html  globals.html  globals_defs.html  graph_legend.html  index.html  md_CHANGELOG.html  md_README.html  menudata.js  pages.html
docs/search/: all_0.js  defines_0.js  files_0.js  pages_0.js  searchdata.js
examples/: CMakeLists.txt  demo.c
scripts/: check-fmt.sh  fmt.sh  test.sh
